# crossfeed

./: .gitignore  Cargo.toml  README.md
crossfeed-codec/: Cargo.toml
crossfeed-codec/src/: compress.rs  encode.rs  error.rs  hash.rs  lib.rs
crossfeed-codec/tests/: compress_test.rs  encode_test.rs  hash_test.rs
crossfeed-core/: Cargo.toml
crossfeed-core/src/: lib.rs
crossfeed-fuzzer/: Cargo.toml
crossfeed-fuzzer/src/: analysis.rs  error.rs  lib.rs  model.rs  payload.rs  run.rs  template.rs
crossfeed-fuzzer/tests/: expand_test.rs  run_test.rs  template_test.rs  transform_test.rs
crossfeed-gui/: Cargo.toml
crossfeed-gui/src/: app.rs  main.rs  menu.rs  project_picker.rs  project_settings.rs  replay.rs  theme.rs  timeline.rs
crossfeed-gui/src/ui/panes/: mod.rs  request_details.rs  request_list.rs  response_preview.rs
crossfeed-ingest/: Cargo.toml
crossfeed-ingest/src/: lib.rs  project_runtime.rs  proxy_runtime.rs  replay_runtime.rs  scope.rs  timeline_tail.rs
crossfeed-net/: Cargo.toml
crossfeed-net/src/: lib.rs
crossfeed-net/src/http1/: mod.rs  parser.rs  stream.rs  types.rs
crossfeed-net/src/http2/: encoder.rs  hpack.rs  mod.rs  parser.rs  types.rs
crossfeed-net/src/socks/: client.rs  mod.rs  parser.rs  types.rs
crossfeed-net/src/tls/: ca.rs  cache.rs  cert.rs  mod.rs  openssl.rs  types.rs
crossfeed-proxy/: Cargo.toml
crossfeed-proxy-cli/: Cargo.toml
crossfeed-proxy-cli/src/: main.rs
crossfeed-proxy/src/: config.rs  error.rs  events.rs  intercept.rs  lib.rs  proxy.rs  scope.rs  timeline.rs  timeline_event.rs
crossfeed-replay/: Cargo.toml
crossfeed-replay/src/: error.rs  lib.rs  model.rs  service.rs
crossfeed-replay/tests/: send_test.rs  service_test.rs
crossfeed-storage/: Cargo.toml
crossfeed-storage/src/: lib.rs  project.rs  query.rs  query_test.rs  replay.rs  replay_test.rs  schema.rs  scope.rs  sqlite.rs  sqlite_test.rs  timeline.rs  timeline_test.rs  worker.rs
crossfeed-tui/: Cargo.toml
crossfeed-tui/src/: main.rs
crossfeed-web/: Cargo.toml
crossfeed-web/src/: batch.rs  client.rs  client_test.rs  download.rs  download_test.rs  lib.rs  rate_limit.rs  rate_limit_test.rs  request.rs  request_test.rs  response.rs  retry.rs  retry_test.rs
docs/: crossfeed-v1-master-plan.md  crossfeed-v1-requirements.md  project-format.md
