[workspace]
resolver = "2"
members = [
    "crossfeed-codec",
    "crossfeed-core",
    "crossfeed-gui",
    "crossfeed-net",
    "crossfeed-proxy",
    "crossfeed-proxy-cli",
    "crossfeed-replay",
    "crossfeed-storage",
    "crossfeed-ingest",
    "crossfeed-tui",
    "crossfeed-web",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = "warn"
