[package]
name = "crossfeed-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
bs58 = "0.5"
data-encoding = "2.6"
flate2 = "1.0"
hex = "0.4"
html-escape = "0.2"
md5 = "0.7"
percent-encoding = "2.3"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
assert_matches = "1"
