[package]
name = "crossfeed-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossfeed-net = { path = "../crossfeed-net" }
crossfeed-proxy = { path = "../crossfeed-proxy" }
crossfeed-replay = { path = "../crossfeed-replay" }
crossfeed-storage = { path = "../crossfeed-storage" }
crossfeed-web = { path = "../crossfeed-web" }
futures = "0.3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

[features]
sync-runtime = []
