[package]
name = "crossfeed-net"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
hpack = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
twoway = "0.2"

[lints]
workspace = true
