[package]
name = "crossfeed-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossfeed-net = { path = "../crossfeed-net" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
crossfeed-storage = { path = "../crossfeed-storage" }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
url = "2"

[dev-dependencies]
assert_matches = "1"
