[package]
name = "crossfeed-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "1"

crossfeed-storage = { path = "../crossfeed-storage" }

[dev-dependencies]
tempfile = "3"
