[package]
name = "crossfeed-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"

[dev-dependencies]
assert_matches = "1"
tempfile = "3"
