[package]
name = "crossfeed-web"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
http = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-native-tls = "0.3"
native-tls = { version = "0.2", features = ["alpn"] }
crossfeed-net = { path = "../crossfeed-net" }

[dev-dependencies]
assert_matches = "1"
